UHF-11689: Fixed issue where icon width got too small

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/content/_term-page.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/content/_term-page.scss
@@ -12,6 +12,7 @@
     &::before {
       @include pseudo-icon('rss', $spacing-and-half, $color-black);
 
+      flex-shrink: 0;
       margin-inline-end: $spacing-half;
     }
 
